more clean modification