@@ -31,11 +31,17 @@ import org.apache.hugegraph.util.E;
 import org.apache.hugegraph.util.Log;
 import org.slf4j.Logger;
 
+/**
+ * BREAKING CHANGE:
+ * since 1.7.0, only "hstore, rocksdb, hbase, memory" are supported for backend.
+ * if you want to use cassandra, mysql, postgresql, cockroachdb or palo as backend,
+ * please find a version before 1.7.0 of apache hugegraph for your application.
+ */
 public class BackendProviderFactory {
 
     private static final Logger LOG = Log.logger(BackendProviderFactory.class);
 
-    private static Map<String, Class<? extends BackendStoreProvider>> providers;
+    private static final Map<String, Class<? extends BackendStoreProvider>> providers;
 
     private static final List<String> LEGAL_BACKEND = List.of("memory", "rocksdb", "hbase",
                                                               "hstore");
@@ -52,8 +58,7 @@ public class BackendProviderFactory {
 
         BackendStoreProvider provider = newProvider(config);
         if (raftMode) {
-            LOG.info("Opening backend store '{}' in raft mode for graph '{}'",
-                     backend, graph);
+            LOG.info("Opening backend store '{}' in raft mode for graph '{}'", backend, graph);
             provider = new RaftBackendStoreProvider(params, provider);
         }
         provider.open(graph);
@@ -62,14 +67,10 @@ public class BackendProviderFactory {
 
     private static BackendStoreProvider newProvider(HugeConfig config) {
         String backend = config.get(CoreOptions.BACKEND).toLowerCase();
-        // NOTE: since 1.7.0, only hstore, rocksdb, hbase, memory are supported for backend.
-        // if you want to use cassandra, mysql, postgresql, cockroachdb or palo as backend,
-        // please find a version before 1.7.0 of apache hugegraph for your application.
         E.checkState(LEGAL_BACKEND.contains(backend.toLowerCase()),
                      "backend is illegal: %s", backend);
 
         String graph = config.get(CoreOptions.STORE);
-
         if (InMemoryDBStoreProvider.matchType(backend)) {
             return InMemoryDBStoreProvider.instance(graph);
         }
@@ -79,24 +80,23 @@ public class BackendProviderFactory {
                                "Not exists BackendStoreProvider: %s", backend);
 
         assert BackendStoreProvider.class.isAssignableFrom(clazz);
-        BackendStoreProvider instance = null;
+        BackendStoreProvider instance;
         try {
-            instance = clazz.newInstance();
+            instance = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new BackendException(e);
         }
 
         BackendException.check(backend.equals(instance.type()),
                                "BackendStoreProvider with type '%s' " +
-                               "can't be opened by key '%s'",
-                               instance.type(), backend);
+                               "can't be opened by key '%s'", instance.type(), backend);
         return instance;
     }
 
     @SuppressWarnings({"rawtypes", "unchecked"})
     public static void register(String name, String classPath) {
         ClassLoader classLoader = BackendProviderFactory.class.getClassLoader();
-        Class<?> clazz = null;
+        Class<?> clazz;
         try {
             clazz = classLoader.loadClass(classPath);
         } catch (Exception e) {
